--- a/pages/register.html
+++ b/pages/register.html
@@ -4,153 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - הרשמה</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background-image: url('../img/background.webp');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            min-height: 100vh;
-        }
-
-        .header {
-            background-color: white;
-            padding: 1rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: #333;
-        }
-
-        .auth-reseller img {
-            height: 30px;
-        }
-
-        .register-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 2rem;
-            padding-top: 80px;
-        }
-
-        .register-form {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            width: 100%;
-            max-width: 600px;
-            margin: 20px 0;
-        }
-
-        .form-title {
-            text-align: center;
-            margin-bottom: 2rem;
-            font-size: 24px;
-        }
-
-        .form-group {
-            margin-bottom: 1rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-group input, .form-group textarea {
-            width: 100%;
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        .form-group textarea {
-            min-height: 100px;
-            resize: vertical;
-        }
-
-        .register-btn {
-            width: 100%;
-            padding: 0.75rem;
-            background-color: #0066cc;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 1rem;
-        }
-
-        .register-btn:hover {
-            background-color: #0052a3;
-        }
-
-        .checkbox-group {
-            margin-top: 1rem;
-        }
-
-        .checkbox-group label {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .checkbox-group input {
-            width: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="/group14/css/register.css">
+    <link rel="stylesheet" href="/group14/css/header.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="nav-container">
-            <div class="logo">AppleSpot</div>
-            <ul class="nav-links">
-                <li><a href="#">Mac</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#">iPhone</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">אביזרים</a></li>
-            </ul>
-            <div class="auth-reseller">
-                <img src="../img/logo.jpg" alt="Apple Authorized Reseller">
-            </div>
-        </nav>
-    </header>
+    <div id="header-component"></div>
 
     <main class="register-container">
         <div class="register-form">
@@ -204,6 +62,15 @@
             </form>
         </div>
     </main>
+
+    <script src="/group14/js/components.js"></script>
+    <script src="/group14/js/main.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            loadComponent('header-component', '/group14/components/header.html');
+        });
+    </script>
 
     <script>
         document.getElementById('registerForm').addEventListener('submit', function(e) {
