--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
                     <a href="https://wa.me/" class="whatsapp-link">
                         <img src="/group14/img/whatsapp-icon.png" alt="WhatsApp">
                     </a>
-                    <a href="#" class="instagram-link">
+                    <a href="https://instagram.com/apple" class="instagram-link">
                         <img src="/group14/img/instagram-icon.png" alt="Instagram">
                     </a>
                 </div>
