Added color, storage, sku

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -11,7 +11,6 @@
 
     <main class="checkout-container">
         <form id="checkout-form" onsubmit="handleSubmit(event)">
-            <!-- Personal Details Section -->
             <div class="checkout-section">
                 <h2 class="section-title">פרטים אישיים</h2>
                 <div class="form-group">
@@ -28,7 +27,6 @@
                 </div>
             </div>
 
-            <!-- Delivery Method Section -->
             <div class="checkout-section">
                 <h2 class="section-title">שיטת משלוח</h2>
                 <div class="delivery-options">
@@ -58,7 +56,6 @@
                 </div>
             </div>
 
-            <!-- Payment Method Section -->
             <div class="checkout-section">
                 <h2 class="section-title">אמצעי תשלום</h2>
                 <div class="payment-options">
@@ -77,11 +74,10 @@
                 </div>
             </div>
 
-            <!-- Order Summary Section -->
+             Order Summary Section -->
             <div class="checkout-section">
                 <h2 class="section-title">סיכום הזמנה</h2>
                 <div class="order-summary" id="order-summary">
-                    <!-- Will be populated by JS -->
                 </div>
             </div>
 
