--- a/pages/cart.html
+++ b/pages/cart.html
@@ -7,48 +7,48 @@
     <link rel="stylesheet" href="/group14/css/cart.css">
 </head>
 <body>
-    <div id="header-component"></div>
+<div id="header-component"></div>
 
-    <main class="cart-container">
-        <h1>עגלת קניות</h1>
-        <div id="cart-items" class="cart-items">
-            <!-- Cart items will be populated here -->
+<main class="cart-container">
+    <h1>עגלת קניות</h1>
+    <div id="cart-items" class="cart-items">
+        <!-- Cart items will be populated here -->
+    </div>
+    <div class="cart-summary">
+        <div class="cart-total">
+            <span>סה"כ:</span>
+            <span id="cart-total-amount">0</span>
         </div>
-        <div class="cart-summary">
-            <div class="cart-total">
-                <span>סה"כ:</span>
-                <span id="cart-total-amount">₪0</span>
-            </div>
-            <button id="checkout-btn" class="btn-primary">המשך לתשלום</button>
-        </div>
-    </main>
+        <button id="checkout-btn" class="btn-primary">המשך לתשלום</button>
+    </div>
+</main>
 
-    <script src="/group14/js/components.js"></script>
-    <script type="module">
-        import { CartService } from '/group14/js/cart-service.js';
+<script src="/group14/js/components.js"></script>
+<script type="module">
+    import {CartService} from '/group14/js/cart-service.js';
 
-        document.addEventListener('DOMContentLoaded', async () => {
-            await loadComponent('header-component', '/group14/components/header.html');
-            renderCart();
-            setupCheckoutButton();
+    document.addEventListener('DOMContentLoaded', async () => {
+        await loadComponent('header-component', '/group14/components/header.html');
+        renderCart();
+        setupCheckoutButton();
+    });
+
+    function setupCheckoutButton() {
+        document.getElementById('checkout-btn').addEventListener('click', () => {
+            window.location.href = '/group14/pages/checkout.html';
         });
+    }
 
-        function setupCheckoutButton() {
-            document.getElementById('checkout-btn').addEventListener('click', () => {
-                window.location.href = '/group14/pages/checkout.html';
-            });
+    function renderCart() {
+        const cartItems = CartService.getCart();
+        const cartContainer = document.getElementById('cart-items');
+
+        if (cartItems.length === 0) {
+            cartContainer.innerHTML = '<p class="empty-cart">העגלה ריקה</p>';
+            return;
         }
 
-        function renderCart() {
-            const cartItems = CartService.getCart();
-            const cartContainer = document.getElementById('cart-items');
-
-            if (cartItems.length === 0) {
-                cartContainer.innerHTML = '<p class="empty-cart">העגלה ריקה</p>';
-                return;
-            }
-
-            cartContainer.innerHTML = cartItems.map(item => `
+        cartContainer.innerHTML = cartItems.map(item => `
                 <div class="cart-item" data-id="${item.id}">
                     <img src="${item.image}" alt="${item.name}" class="cart-item-image">
                     <div class="cart-item-details">
@@ -66,55 +66,56 @@
                         <button onclick="incrementQuantity(${item.id})">+</button>
                     </div>
                     <div class="cart-item-actions">
-                        <button class="remove-item" onclick="removeFromCart(${item.id})">הסר</button>
+    <button class="remove-item" onclick='removeFromCart(${JSON.stringify(item)})'>הסר</button>
                     </div>
                 </div>
             `).join('');
 
+        updateTotal();
+    }
+
+    function updateTotal() {
+        const total = CartService.getCartTotal();
+        document.getElementById('cart-total-amount').textContent = `₪${total.toLocaleString()}`;
+    }
+
+    // Make functions globally available
+    window.incrementQuantity = function (productId) {
+        const input = document.querySelector(`.cart-item[data-id="${productId}"] .quantity-input`);
+        const currentValue = parseInt(input.value);
+        if (currentValue < 99) {
+            const newValue = currentValue + 1;
+            input.value = newValue;
+            CartService.updateQuantity(productId, newValue);
             updateTotal();
         }
+    };
 
-        function updateTotal() {
-            const total = CartService.getCartTotal();
-            document.getElementById('cart-total-amount').textContent = `₪${total.toLocaleString()}`;
+    window.decrementQuantity = function (productId) {
+        const input = document.querySelector(`.cart-item[data-id="${productId}"] .quantity-input`);
+        const currentValue = parseInt(input.value);
+        if (currentValue > 1) {
+            const newValue = currentValue - 1;
+            input.value = newValue;
+            CartService.updateQuantity(productId, newValue);
+            updateTotal();
         }
+    };
 
-        // Make functions globally available
-        window.incrementQuantity = function(productId) {
-            const input = document.querySelector(`.cart-item[data-id="${productId}"] .quantity-input`);
-            const currentValue = parseInt(input.value);
-            if (currentValue < 99) {
-                const newValue = currentValue + 1;
-                input.value = newValue;
-                CartService.updateQuantity(productId, newValue);
-                updateTotal();
-            }
-        };
+    window.updateQuantity = function (productId, value) {
+        let quantity = parseInt(value);
+        if (isNaN(quantity) || quantity < 1) quantity = 1;
+        if (quantity > 99) quantity = 99;
 
-        window.decrementQuantity = function(productId) {
-            const input = document.querySelector(`.cart-item[data-id="${productId}"] .quantity-input`);
-            const currentValue = parseInt(input.value);
-            if (currentValue > 1) {
-                const newValue = currentValue - 1;
-                input.value = newValue;
-                CartService.updateQuantity(productId, newValue);
-                updateTotal();
-            }
-        };
+        CartService.updateQuantity(productId, quantity);
+        renderCart(); // Re-render to ensure consistent state
+    };
 
-        window.updateQuantity = function(productId, value) {
-            let quantity = parseInt(value);
-            if (isNaN(quantity) || quantity < 1) quantity = 1;
-            if (quantity > 99) quantity = 99;
-
-            CartService.updateQuantity(productId, quantity);
-            renderCart(); // Re-render to ensure consistent state
-        };
-
-        window.removeFromCart = function(productId) {
-            CartService.removeFromCart(productId);
-            renderCart();
-        };
-    </script>
+    window.removeFromCart = function (product) {
+        CartService.removeFromCart(product);
+        renderCart();
+        updateTotal();
+    };
+</script>
 </body>
 </html>
