--- a/part2/pages/contact.html
+++ b/part2/pages/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - צור קשר</title>
-    <link rel="stylesheet" href="/group14/css/style.css">
-    <link rel="stylesheet" href="/group14/css/contact.css">
+    <link rel="stylesheet" href="/group14/part2/css/style.css">
+    <link rel="stylesheet" href="/group14/part2/css/contact.css">
 </head>
 <body class="contact-page">
     <div id="header-component"></div>
@@ -36,24 +36,24 @@
                 <h3>צור איתנו קשר גם כאן</h3>
                 <div class="social-links">
                     <a href="tel:" class="phone-link">
-                        <img src="/group14/img/phone-icon.png" alt="Phone">
+                        <img src="/group14/part2/img/phone-icon.png" alt="Phone">
                     </a>
                     <a href="https://wa.me/" class="whatsapp-link">
-                        <img src="/group14/img/whatsapp-icon.png" alt="WhatsApp">
+                        <img src="/group14/part2/img/whatsapp-icon.png" alt="WhatsApp">
                     </a>
                     <a href="https://instagram.com/apple" class="instagram-link">
-                        <img src="/group14/img/instagram-icon.png" alt="Instagram">
+                        <img src="/group14/part2/img/instagram-icon.png" alt="Instagram">
                     </a>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="/group14/js/components.js"></script>
+    <script src="/group14/part2/js/components.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             // Load the header component first
-            await loadComponent('header-component', '/group14/components/header.html');
+            await loadComponent('header-component', '/group14/part2/components/header.html');
 
             // Form submission handler
             document.getElementById('contactForm').addEventListener('submit', function(e) {
