--- a/part2/pages/register.html
+++ b/part2/pages/register.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - הרשמה</title>
-    <link rel="stylesheet" href="/group14/css/register.css">
-    <link rel="stylesheet" href="/group14/css/header.css">
+    <link rel="stylesheet" href="/group14/part2/css/register.css">
+    <link rel="stylesheet" href="/group14/part2/css/header.css">
 </head>
 <body>
     <div id="header-component"></div>
@@ -63,11 +63,11 @@
         </div>
     </main>
 
-    <script src="/group14/js/components.js"></script>
+    <script src="/group14/part2/js/components.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('header-component', '/group14/components/header.html');
+            loadComponent('header-component', '/group14/part2/components/header.html');
         });
     </script>
 
