--- a/part2/pages/product.html
+++ b/part2/pages/product.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - Product Details</title>
 
-    <link rel="stylesheet" href="/group14/css/header.css">
-    <link rel="stylesheet" href="/group14/css/product-page.css">
-    <link rel="stylesheet" href="/group14/css/product-options.css">
+    <link rel="stylesheet" href="/group14/part2/css/header.css">
+    <link rel="stylesheet" href="/group14/part2/css/product-page.css">
+    <link rel="stylesheet" href="/group14/part2/css/product-options.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -56,18 +56,18 @@
         </div>
     </div>
 
-    <script type="module" src="/group14/js/product-gallery.js"></script>
-    <script src="/group14/js/components.js"></script>
+    <script type="module" src="/group14/part2/js/product-gallery.js"></script>
+    <script src="/group14/part2/js/components.js"></script>
     <script type="module">
-        import {getProductDetails, updateProductPage} from '/group14/js/product-gallery.js';
-        import { CartService } from '/group14/js/cart-service.js';
+        import {getProductDetails, updateProductPage} from '/group14/part2/js/product-gallery.js';
+        import { CartService } from '/group14/part2/js/cart-service.js';
 
         window.cartService = CartService;
         let currentProduct = null;
 
         document.addEventListener('DOMContentLoaded', async () => {
             try {
-                await loadComponent('header-component', '/group14/components/header.html');
+                await loadComponent('header-component', '/group14/part2/components/header.html');
 
                 const urlParams = new URLSearchParams(window.location.search);
                 const category = urlParams.get('category') || 'mac';
@@ -114,7 +114,6 @@
         window.addToCart = function() {
         if (window.currentProduct) {
             const quantity = parseInt(document.getElementById('quantity').value);
-            console.log(window.currentProduct)
             const currentProduct = window.currentProduct;
             let productSku = `${currentProduct.id}`
             if (currentProduct.selectedColor && currentProduct.selectedStorage)
