--- a/part2/pages/thank-you.html
+++ b/part2/pages/thank-you.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>AppleSpot - אישור הזמנה</title>
-    <link rel="stylesheet" href="/group14/css/style.css">
-    <link rel="stylesheet" href="/group14/css/thank-you.css">
+    <link rel="stylesheet" href="/group14/part2/css/style.css">
+    <link rel="stylesheet" href="/group14/part2/css/thank-you.css">
 </head>
 <body>
     <div id="header-component"></div>
@@ -44,16 +44,16 @@
             <div class="next-steps">
                 <p>אנו נעדכן אותך בהמשך התהליך באמצעות המייל</p>
                 <div class="buttons">
-                    <a href="/group14/index.html" class="button primary">חזרה לדף הבית</a>
+                    <a href="/group14/part2/index.html" class="button primary">חזרה לדף הבית</a>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="/group14/js/components.js"></script>
+    <script src="/group14/part2/js/components.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
-            await loadComponent('header-component', '/group14/components/header.html');
+            await loadComponent('header-component', '/group14/part2/components/header.html');
 
             const urlParams = new URLSearchParams(window.location.search);
 
