--- a/part2/pages/checkout.html
+++ b/part2/pages/checkout.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>AppleSpot - תשלום</title>
-    <link rel="stylesheet" href="/group14/part2/css/style.css">
-    <link rel="stylesheet" href="/group14/part2/css/checkout.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/checkout.css">
 </head>
 <body>
     <div id="header-component"></div>
@@ -74,7 +74,6 @@
                 </div>
             </div>
 
-             Order Summary Section -->
             <div class="checkout-section">
                 <h2 class="section-title">סיכום הזמנה</h2>
                 <div class="order-summary" id="order-summary">
@@ -85,12 +84,12 @@
         </form>
     </main>
 
-    <script src="/group14/part2/js/components.js"></script>
+    <script src="../js/components.js"></script>
     <script type="module">
-        import { CartService } from '/group14/part2/js/cart-service.js';
+        import { CartService } from '../js/cart-service.js';
 
         document.addEventListener('DOMContentLoaded', async () => {
-            await loadComponent('header-component', '/group14/part2/components/header.html');
+            await loadComponent('header-component', '../components/header.html');
             updateOrderSummary();
         });
 
