--- a/part2/pages/login.html
+++ b/part2/pages/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - התחברות</title>
-    <link rel="stylesheet" href="/group14/part2/css/login.css">
-    <link rel="stylesheet" href="/group14/part2/css/header.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/header.css">
 </head>
 <body>
     <div id="header-component"></div>
@@ -35,11 +35,11 @@
         </div>
     </main>
 
-    <script src="/group14/part2/js/components.js"></script>
+    <script src="../js/components.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('header-component', '/group14/part2/components/header.html');
+            loadComponent('header-component', '../components/header.html');
         });
     </script>
 
