--- a/part2/index.html
+++ b/part2/index.html
@@ -31,7 +31,7 @@
     <script src="js/components.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('header-component', 'components/header.html');
+            window.loadHeader();
         });
     </script>
 </body>
