--- a/part2/pages/cart.html
+++ b/part2/pages/cart.html
@@ -28,7 +28,7 @@
     import {CartService} from '../js/cart-service.js';
 
     document.addEventListener('DOMContentLoaded', async () => {
-        await loadComponent('header-component', '../components/header.html');
+        window.loadHeader();
         renderCart();
         setupCheckoutButton();
     });
