--- a/part2/pages/products.html
+++ b/part2/pages/products.html
@@ -25,7 +25,7 @@
         };
 
         document.addEventListener('DOMContentLoaded', async () => {
-            await loadComponent('header-component', '../components/header.html');
+            window.loadHeader();
             
             // Get category from URL parameter
             const urlParams = new URLSearchParams(window.location.search);
