--- a/part2/index.html
+++ b/part2/index.html
@@ -28,10 +28,10 @@
         </div>
     </main>
 
-    <script src="js/components.js"></script>
-    <script>
+    <script type="module">
+        import { loadHeader } from './js/components.js';
         document.addEventListener('DOMContentLoaded', () => {
-            window.loadHeader();
+            loadHeader();
         });
     </script>
 </body>
