--- a/part2/pages/checkout.html
+++ b/part2/pages/checkout.html
@@ -97,7 +97,8 @@
     <script src="../js/components.js"></script>
     <script type="module">
       import { CartService } from "../js/cart-service.js";
-
+      import { loadHeader } from "../js/components.js";
+      
       const API_BASE_URL = "http://localhost:5000";
 
       document.addEventListener("DOMContentLoaded", async () => {
