--- a/part2/pages/contact.html
+++ b/part2/pages/contact.html
@@ -51,7 +51,9 @@
     </main>
 
     <script src="../js/components.js"></script>
-    <script>
+    <script type="module">
+        import { loadHeader } from '../js/components.js';
+        
         const API_BASE_URL = 'http://localhost:5000';
 
         document.addEventListener('DOMContentLoaded', async () => {
