--- a/part2/pages/login.html
+++ b/part2/pages/login.html
@@ -35,14 +35,15 @@
 
     <script src="../js/components.js"></script>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        window.loadHeader();
+    <script type="module">
+        import { loadHeader } from '../js/components.js';
+        document.addEventListener("DOMContentLoaded", async () => {
+            await loadHeader()
       });
     </script>
 
     <script>
-            document
+      document
         .getElementById("loginForm")
         .addEventListener("submit", async function (e) {
           e.preventDefault();
