--- a/part2/pages/register.html
+++ b/part2/pages/register.html
@@ -64,9 +64,10 @@
     </main>
 
     <script src="/../js/components.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        window.loadHeader();
+    <script type="module">
+      import { loadHeader } from "../js/components.js";
+      document.addEventListener("DOMContentLoaded", async () => {
+        await loadHeader();
       });
     </script>
 
