--- a/part2/pages/thank-you.html
+++ b/part2/pages/thank-you.html
@@ -31,16 +31,17 @@
             <div class="next-steps">
                 <p>אנו נעדכן אותך בהמשך התהליך באמצעות המייל</p>
                 <div class="buttons">
-                    <a href="/group14/part2/index.html" class="button primary">חזרה לדף הבית</a>
+                    <a href="/index.html" class="button primary">חזרה לדף הבית</a>
                 </div>
             </div>
         </div>
     </main>
 
     <script src="../js/components.js"></script>
-    <script>
+    <script type="module">
+        import { loadHeader } from '../js/components.js';
         document.addEventListener('DOMContentLoaded', async () => {
-            window.loadHeader();
+            await loadHeader()
 
             const urlParams = new URLSearchParams(window.location.search);
             
