--- a/part3/index.html
+++ b/part3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - המקום הבטוח לרכוש את מוצרי Apple</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <div id="header-component"></div>
