--- a/part3/pages/products.html
+++ b/part3/pages/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>AppleSpot - Products</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/product-gallery.css">
 </head>
 <body>
