--- a/part3/pages/checkout.html
+++ b/part3/pages/checkout.html
@@ -5,6 +5,7 @@
     <title>AppleSpot - תשלום</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/checkout.css" />
+    <link rel="stylesheet" href="../css/header.css">
   </head>
   <body>
     <div id="header-component"></div>
