--- a/part3/pages/contact.html
+++ b/part3/pages/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AppleSpot - צור קשר</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body class="contact-page">
