--- a/part3/pages/thank-you.html
+++ b/part3/pages/thank-you.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>AppleSpot - אישור הזמנה</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/thank-you.css">
 </head>
 <body>
